--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 <body id="page-top">
 
   <!-- Navigation -->
+  <!-- <div class="navbar-header">
+    <img src="img/ft-logo.png"/>
+  </div> -->
   <a class="menu-toggle rounded" href="#">
     <i class="fas fa-bars"></i>
   </a>
@@ -52,20 +55,11 @@
     </ul>
   </nav>
 
-  <!-- ****LOGIN***** Header -->
+  <!-- ****LOGIN*****  -->
   <header class="masthead d-flex">
-    <!-- <div class="container text-center my-auto">
-      <h1 class="mb-1">Stylish Portfolio</h1>
-      <h3 class="mb-5">
-        <em>A Free Bootstrap Theme by Start Bootstrap</em>
-      </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
-    </div>
-    <div class="overlay"> 
-    </div> -->
     <form class="form-horizontal">
       <div class="form-group">
-        <label class="control-label col-sm-2" for="email">Email:</label>
+        <label class="control-label col-sm-2" for="email">Login Email:</label>
         <div class="col-sm-10">
           <input type="email" class="form-control" id="email" placeholder="Enter email">
         </div>
@@ -85,7 +79,9 @@
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default">Submit</button>
+          <!-- <button type="submit" class="btn btn-default" href="#about">Submit</button> -->
+          <a class="btn btn-default" href="#about">Submit</a>
+
         </div>
       </div>
     </form> 
@@ -105,28 +101,34 @@
     </div> -->
     <form class="form-horizontal">
       <div class="form-group">
-        <label class="control-label col-sm-2" for="email">Email:</label>
+        <label class="control-label col-sm-2" for="email">Transfer From:</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="email" placeholder="Enter email">
+          <input type="input" class="form-control">
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-sm-2" for="pwd">Password:</label>
+        <label class="control-label col-sm-2" for="pwd">Transfer To:</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+          <input type="input" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="pwd">Amount:</label>
+        <div class="col-sm-10">
+          <input type="input" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="pwd">Date:</label>
+        <div class="col-sm-10">
+          <input type="date" class="form-control" >
         </div>
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <div class="checkbox">
-            <label><input type="checkbox"> Remember me</label>
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default">Submit</button>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
+          <!-- <button type="submit" class="btn btn-default">Submit</button>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a> -->
+          <a class="btn btn-default" href="#services">Submit</a>
         </div>
       </div>
     </form> 
@@ -136,28 +138,22 @@
   <section class="content-section bg-primary text-white text-center" id="services">
     <form class="form-horizontal">
       <div class="form-group">
-        <label class="control-label col-sm-2" for="email">Email:</label>
+        <label class="control-label col-sm-2" for="email">User X Approval:</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="email" placeholder="Enter email">
+          <input type="input" class="form-control" placeholder="Approved!">
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-sm-2" for="pwd">Password:</label>
+        <label class="control-label col-sm-2" for="pwd">User Y Approval:</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+          <input type="input" class="form-control" placeholder="Pending">
         </div>
+      </div>
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <div class="checkbox">
-            <label><input type="checkbox"> Remember me</label>
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default">Submit</button>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
+          <!-- <button type="submit" class="btn btn-default">Wallet</button> -->
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">Wallet</a>
         </div>
       </div>
     </form> 
@@ -167,29 +163,18 @@
   <section class="content-section" id="portfolio">
     <form class="form-horizontal">
       <div class="form-group">
-        <label class="control-label col-sm-2" for="email">Email:</label>
+        <label class="control-label col-sm-2" for="email">Eth:</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="email" placeholder="Enter email">
+          <input type="input" class="form-control" placeholder="5.17">
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-sm-2" for="pwd">Password:</label>
+        <label class="control-label col-sm-2" for="pwd">Bitcoin:</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+          <input type="input" class="form-control" placeholder="12.003">
         </div>
       </div>
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <div class="checkbox">
-            <label><input type="checkbox"> Remember me</label>
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default">Submit</button>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
-        </div>
+      
       </div>
     </form> 
   </section>
